chore(release): publish version 0.2.0-alpha.1
