# models/album-update-data.ts
@@ -1,0 +1,33 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * galera
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 0.1.0
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+/**
+ *
+ * @export
+ * @interface AlbumUpdateData
+ */
+export interface AlbumUpdateData {
+  /**
+   *
+   * @type {string}
+   * @memberof AlbumUpdateData
+   */
+  description?: string | null;
+  /**
+   *
+   * @type {string}
+   * @memberof AlbumUpdateData
+   */
+  name?: string | null;
+}
