# models/index.ts
@@ -1,3 +1,7 @@
+export * from "./album-insert-data";
+export * from "./album-response";
+export * from "./album-update-data";
 export * from "./media-response";
+export * from "./new-album-media";
 export * from "./new-user";
 export * from "./user-login";
