# models/new-album-media.ts
@@ -1,0 +1,33 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * galera
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 0.1.0
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+/**
+ *
+ * @export
+ * @interface NewAlbumMedia
+ */
+export interface NewAlbumMedia {
+  /**
+   *
+   * @type {number}
+   * @memberof NewAlbumMedia
+   */
+  album_id: number;
+  /**
+   *
+   * @type {number}
+   * @memberof NewAlbumMedia
+   */
+  media_id: number;
+}
